--- a/app/templates/app/events.html
+++ b/app/templates/app/events.html
@@ -7,13 +7,16 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1>Eventos</h1>
         {% if user_is_organizer %}
-            <a
-                href="{% url 'event_form' %}"
-                class="btn btn-primary"
-            >
+        <div class="d-flex">
+            <a href="{% url 'event_form' %}" class="btn btn-primary me-2">
                 <i class="bi bi-plus-circle me-2" aria-hidden="true"></i>
                 Crear Evento
             </a>
+            <a href="{% url 'venue_list' %}" class="btn btn-primary">
+                <i class="bi bi-plus-circle me-2" aria-hidden="true"></i>
+                Gestionar Ubicaciones
+            </a>
+        </div>
         {% endif %}
     </div>
     <table class="table">
