Vista de home modificada para admin y usuario

--- a/app/templates/app/venue_form.html
+++ b/app/templates/app/venue_form.html
@@ -25,7 +25,7 @@
                                     type="text"
                                     value="{{ venue.name }}"
                                     name="name"
-                                    placeholder="Estadio Uno">
+                                    placeholder="Ej: Estadio Uno">
                             </div>
                             
                             <div>
@@ -36,7 +36,7 @@
                                     type="text"
                                     value="{{ venue.address }}"
                                     name="address"
-                                    placeholder="Av. 1 1150-1198, B1900 La Plata">
+                                    placeholder="Ej: Av. 1 1150-1198, B1900 La Plata">
                             </div>
                             
                             <div class="row">
@@ -48,7 +48,7 @@
                                         type="text"
                                         value="{{ venue.city }}"
                                         name="city"
-                                        placeholder="La Plata, pr">
+                                        placeholder="Ej: La Plata">
                                 </div>
                                 <div class="col-md-6">
                                     <label for="capacity" class="form-label">Capacidad *</label>
@@ -58,7 +58,7 @@
                                         type="number"
                                         value="{{ venue.capacity }}"
                                         name="capacity"
-                                        placeholder="32500">
+                                        placeholder="Ej: 32500">
                                 </div>
                             </div>
                             
