--- a/app/templates/app/event_detail.html
+++ b/app/templates/app/event_detail.html
@@ -5,17 +5,20 @@
     <div class="row">
         <div class="d-flex justify-content-between align-items-center">
             <h1>{{ event.title }}</h1>
-            <div>
-            {% if user_is_organizer %}
-                <a
-                    href="{% url 'event_edit' event.id %}"
-                    class="btn btn-outline-primary me-2"
-                >
-                    <i class="bi bi-pencil me-1"></i>Editar
-                </a>
+            {% if request.user == event.organizer %}
+                <div>
+                    <a href="{% url 'event_edit' event.id %}" class="btn btn-outline-primary me-2">
+                        <i class="bi bi-pencil me-1"></i>Editar
+                    </a>
+                    <form action="{% url 'event_delete' event.id %}" method="POST" class="d-inline">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-outline-danger">
+                            <i class="bi bi-trash me-1"></i>Eliminar
+                        </button>
+                    </form>
+                </div>
             {% endif %}
         </div>
-    </div>
     <div class="row">
         <div class="card">
             <div class="card-body">
