Agrego relaciones y mejoro la vista

--- a/app/templates/app/event_form.html
+++ b/app/templates/app/event_form.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-md-8 offset-md-2">
             <h1 class="mb-4">
-                {% if event.id %}
+                {% if form.instance.pk %}
                     Editar evento
                 {% else %}
                     Crear evento
@@ -24,11 +24,91 @@
                         {% endif %}
                         
                         <div class="vstack gap-3">
-                            {{ form.as_p }}
                             <div>
+                                <label for="title" class="form-label">Título del Evento *</label>
+                                <input class="form-control"
+                                    id="title"
+                                    required
+                                    type="text"
+                                    name="title"
+                                    value="{{ form.title.value|default:'' }}"
+                                    placeholder="Ej: Festival de Música Primavera">
+                                {{ form.title.errors }}
+                            </div>
+                            
+                            <div>
+                                <label for="description" class="form-label">Descripción *</label>
+                                <textarea class="form-control"
+                                    id="description"
+                                    required
+                                    name="description"
+                                    rows="3"
+                                    placeholder="Describe el evento detalladamente">{{ form.description.value|default:'' }}</textarea>
+                                {{ form.description.errors }}
+                            </div>
+                            
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <label for="date" class="form-label">Fecha *</label>
+                                    <input class="form-control"
+                                        id="date"
+                                        required
+                                        type="date"
+                                        name="date"
+                                        value="{{ form.date.value|default:'' }}">
+                                    {{ form.date.errors }}
+                                </div>
+                                <div class="col-md-6">
+                                    <label for="time" class="form-label">Hora *</label>
+                                    <input class="form-control"
+                                        id="time"
+                                        required
+                                        type="time"
+                                        name="time"
+                                        value="{{ form.time.value|default:'' }}">
+                                    {{ form.time.errors }}
+                                </div>
+                            </div>
+                            
+                            <div>
+                                <label for="venue" class="form-label">Venue (Lugar) *</label>
+                                <select class="form-select" 
+                                    id="venue" 
+                                    name="venue" 
+                                    required>
+                                    <option value="">Seleccione un lugar</option>
+                                    {% for venue in form.venue.field.queryset %}
+                                        <option value="{{ venue.id }}" 
+                                            {% if form.venue.value == venue.id %}selected{% endif %}>
+                                            {{ venue.name }}
+                                        </option>
+                                    {% endfor %}
+                                </select>
+                                {{ form.venue.errors }}
+                            </div>
+
+                            {% if form.categories.field.queryset.exists %}
+                            <div class="border-top pt-3 mt-3">
+                                <label class="form-label">Categorías</label>
+                                <div class="vstack gap-2">
+                                {% for checkbox in form.categories %}
+                                    <div class="form-check">
+                                        {{ checkbox.tag }}
+                                        <label class="form-check-label">
+                                            {{ checkbox.choice_label }}
+                                        </label>
+                                    </div>
+                                {% endfor %}
+                                </div>
+                                {{ form.categories.errors }}
+                            </div>
+                            {% endif %}
+
+                            <div class="mt-3">
                                 <button type="submit" class="btn btn-primary">
-                                    {% if event.id %}Guardar Cambios{% else %}Crear Evento{% endif %}
+                                    {% if form.instance.pk %}Guardar Cambios{% else %}Crear Evento{% endif %}
                                 </button>
+                                <a href="{% url 'events' %}" class="btn btn-outline-secondary">Cancelar</a>
                             </div>
                         </div>
                     </form>
@@ -37,4 +117,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock %}
