--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,6 +6,10 @@
         <h1 class="display-5 fw-bold">Eventos y Entradas</h1>
         <p class="fs-4">Descubre, organiza y participa en los mejores eventos. Compra entradas, deja
             comentarios y califica tus experiencias.</p>
+
+            <a href="{% url 'comentarios_organizador' %}" class="btn btn-primary btn-lg mt-3">
+                Ver comentarios de mis eventos
+            </a>
         <div>
     </div>
 </div>
