Agrego ABM tickets

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -88,3 +88,18 @@
 ></script>
 
 </html>
+
+<style>
+    .table-hover tbody tr:hover {
+        transform: scale(1.01);
+        transition: transform 0.2s;
+    }
+    .badge-vip {
+        background-color: #ffc107;
+        color: #000;
+    }
+    .badge-general {
+        background-color: #0dcaf0;
+        color: #000;
+    }
+    </style>
