--- a/app/templates/tickets/ticket_list.html
+++ b/app/templates/tickets/ticket_list.html
@@ -6,7 +6,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="display-4">Mis Tickets</h1>
         <a href="{% url 'ticket_form' %}" class="btn btn-primary">
-            <i class="bi bi-plus-circle"></i> Nuevo Ticket
+            <i class="bi bi-plus-circle"></i> Comprar Ticket
         </a>
     </div>
 
