--- a/app/templates/refunds/detail.html
+++ b/app/templates/refunds/detail.html
@@ -30,7 +30,10 @@
                 </dd>
                 
                 <dt class="col-sm-3">Motivo:</dt>
-                <dd class="col-sm-9">{{ refund.reason }}</dd>
+                <dd class="col-sm-9">{{ refund.get_reason_display }}</dd>
+
+                <dt class="col-sm-3">Detalles adicionales:</dt>
+                <dd class="col-sm-9">{{ refund.details|linebreaks }}</dd>
             </dl>
             
             <div class="mt-4">
