--- a/app/templates/app/event/events.html
+++ b/app/templates/app/event/events.html
@@ -6,16 +6,15 @@
 <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1>Eventos</h1>
-        {% if user_is_organizer %}
-        <div class="d-flex">
-            <a href="{% url 'event_form' %}" class="btn btn-primary me-2">
+        {% if request.user.is_organizer %}
+            <a href="{% url 'event_create' %}" class="btn btn-primary">
                 <i class="bi bi-plus-circle me-2" aria-hidden="true"></i>
                 Crear Evento
             </a>
-        </div>
         {% endif %}
     </div>
     
+
     <table class="table">
         <thead>
             <tr>
