--- a/app/templates/app/refunds/manage.html
+++ b/app/templates/app/refunds/manage.html
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="card-body">
-            {% include 'partials/messages.html' %}
+            {% include 'app/partials/messages.html' %}
             
             {% if user.is_organizer %}
             <table class="table table-hover align-middle">
@@ -72,6 +72,5 @@
     </div>
 </div>
 
-<!-- Asegurate de incluir Bootstrap Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 {% endblock %}
