--- a/app/templates/app/tickets/ticket_list.html
+++ b/app/templates/app/tickets/ticket_list.html
@@ -1,13 +1,17 @@
-<!-- Listado de tickets -->
 {% extends 'base.html' %}
 
 {% block content %}
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1 class="display-4">Mis Tickets</h1>
-        <a href="{% url 'ticket_form' %}" class="btn btn-primary">
-            <i class="bi bi-plus-circle"></i> Comprar Ticket
-        </a>
+        <div class="btn-group">
+            <a href="{% url 'ticket_form' %}" class="btn btn-primary">
+                <i class="bi bi-plus-circle"></i> Comprar Ticket
+            </a>
+            <a href="{% url 'request_refund' %}" class="btn btn-warning">
+                <i class="bi bi-arrow-counterclockwise"></i> Solicitar Reembolso
+            </a>
+        </div>
     </div>
 
     <div class="table-responsive">
