Agregando mensajes de error para tickets para el funcionamiento del feature agregado

--- a/app/templates/app/tickets/ticket_form.html
+++ b/app/templates/app/tickets/ticket_form.html
@@ -2,6 +2,17 @@
 
 {% block content %}
 <div class="container mt-4">
+
+    {% if messages %}
+        <div class="container mt-3">
+            {% for message in messages %}
+                <div class="alert alert-danger">{{ message }}</div>
+            {% endfor %}
+        </div>
+    {% endif %}
+
+
+
     <form method="post">
         {% csrf_token %}
         
