--- a/app/templates/app/tickets/ticket_form.html
+++ b/app/templates/app/tickets/ticket_form.html
@@ -23,21 +23,21 @@
             
             <div class="card-body">
                 <div class="mb-4 p-3 border rounded">
-                    <div class="form-group">
-                        <label for="{{ form.event.id_for_label }}" class="form-label">Seleccionar Evento</label>
+                    {% if selected_event %}
+                        <input type="hidden" name="event" value="{{ selected_event.id }}">
+                        <div class="mt-3 text-center">
+                            <h2 class="text-primary fw-bold">
+                                {{ selected_event.title }}
+                            </h2>
+                            <p class="text-muted fs-5">
+                                {{ selected_event.scheduled_at|date:"l, j \\d\\e F \\d\\e Y, H:i" }}<br>
+                                {{ selected_event.venue.name }} - {{ selected_event.venue.city }}
+                            </p>
+                        </div>
+                    {% else %}
+                        <label for="{{ form.event.id_for_label }}" class="form-label">Evento</label>
                         {{ form.event }}
-                    </div>
-                    
-                    <div class="mt-3">
-                        <h3 class="text-primary" id="event-title-display">
-                            {% if form.event.value %}
-                                {{ form.event.selected_label|default:"Seleccione un evento" }}
-                            {% else %}
-                                Seleccione un evento
-                            {% endif %}
-                        </h3>
-
-                    </div>
+                    {% endif %}
                 </div>
 
                 <div class="mb-4 p-3 border rounded">
@@ -65,7 +65,12 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label class="form-label">Número de tarjeta</label>
-                                <input type="text" class="form-control" placeholder="1234 5678 9012 3456">
+                                    <input 
+                                        type="text" 
+                                        id="card_number"
+                                        class="form-control" 
+                                        placeholder="1234 5678 9012 3456"
+                                    >
                             </div>
                         </div>
                         <div class="col-md-3">
